<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/user_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true">

        <TextView
            android:id="@+id/tv_repo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_repo_name"
            android:layout_marginTop="24dp"
            android:layout_gravity="start"/>

        <TextView
            android:id="@+id/tv_user_fork_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_repo_fork_count"
            android:layout_marginTop="8dp"
            android:layout_gravity="end"/>

        <TextView
            android:id="@+id/tv_repo_star_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_repo_star_count"
            android:layout_marginTop="40dp"
            android:layout_gravity="end"/>

    </androidx.cardview.widget.CardView>


</LinearLayout>